# svelte-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  README.zh-CN.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  package.yml
crates/sv-arco/: Cargo.toml  README.md  build.rs
crates/sv-arco-tokens/: Cargo.toml  README.md
crates/sv-arco-tokens/src/: generated.rs  generator.rs  lib.rs  palette.rs
crates/sv-arco-tokens/tests/: golden.rs  sync.rs  tokens.rs
crates/sv-arco-tokens/tests/fixtures/: golden_data.rs
crates/sv-arco-tokens/tools/: extract-golden.mjs
crates/sv-arco/components/: Alert.svelte  Badge.svelte  Button.svelte  Divider.svelte  Link.svelte  Tag.svelte  Typography.svelte
crates/sv-arco/src/: lib.rs
crates/sv-arco/tests/: alert.rs  badge.rs  button.rs  divider.rs  link.rs  tag.rs  typography.rs
crates/sv-compiler/: Cargo.toml  README.md
crates/sv-compiler/src/: check.rs  codegen.rs  emit.rs  lib.rs  script.rs  sfc.rs  sourcemap.rs  style.rs  template.rs
crates/sv-compiler/tests/: golden.rs  sourcemap.rs  template_tokens.rs
crates/sv-compiler/tests/fixtures/: child.rs.expected  child.sv  multiclosure.rs.expected  multiclosure.svelte  parent.rs.expected  parent.sv  wide.rs.expected  wide.sv
crates/sv-lottie/: Cargo.toml  README.md
crates/sv-lottie/src/: lib.rs  path.rs  sink.rs  timeline.rs
crates/sv-lottie/tests/: lottie.rs
crates/sv-lsp/: Cargo.toml  README.md
crates/sv-lsp/src/: lib.rs  main.rs
crates/sv-macro/: Cargo.toml  README.md
crates/sv-macro/src/: codegen.rs  ir.rs  lib.rs  parse.rs  store.rs
crates/sv-macro/tests/: store.rs  view.rs
crates/sv-pag/: Cargo.toml  README.md
crates/sv-pag/src/: error.rs  lib.rs  model.rs  parse.rs  reader.rs  replay.rs  tag.rs
crates/sv-pag/tests/: container.rs
crates/sv-reactive/: Cargo.toml  README.md
crates/sv-reactive/src/: lib.rs
crates/sv-shell/: Cargo.toml  README.md
crates/sv-shell/src/: a11y.rs  animation.rs  damage.rs  font.rs  lib.rs  paint.rs  render.rs  text.rs  vello_backend.rs
crates/sv-shell/tests/: public_api.rs
crates/sv-ui/: Cargo.toml  README.md
crates/sv-ui/src/: anim.rs  dirty.rs  focus.rs  input.rs  lib.rs  overlay.rs  shortcuts.rs  tasks.rs  tmpl.rs
crates/sv-vap/: Cargo.toml  README.md
crates/sv-vap/examples/: verify_real_asset.rs
crates/sv-vap/src/: composite.rs  config.rs  lib.rs  mp4.rs
crates/svelte-rs/: Cargo.toml  README.md
crates/svelte-rs/src/: lib.rs
docs/: CSS-SUPPORT.md  DESIGN.md  README.md  README.zh-CN.md  SVELTE-SUPPORT.md
docs/en/: architecture.md  getting-started.md  performance.md  reactivity.md  rendering-backends.md  styling.md  sv-components.md
docs/plans/: adr2-3-setup-render-split.md  incremental-layout.md  launch-runbook.md  lottie-1-ecology.md  lottie-2-architecture.md  lottie-3-spike.md  lsp-spike.md  multi-window.md  open-issues.md  pag-1-ecology.md  pag-2-integration.md
docs/research/: 01-svelte-model.md  02-rust-gui-landscape.md  03-harmonyos.md  04-compiler-strategy.md  05-rendering-stack.md  06-sv-build-integration.md  07-sv-ide-lsp.md  08-sv-runes-transform.md  09-sv-sfc-format-hotreload.md  10-route-comparison-hands-on.md  11-css-industry-strategies.md  12-css-semantics-mapping.md  13-render-backends.md  14-switchable-painter.md  15-scenario-analysis.md  16-memory-benchmarks.md  17-backend-memory-fps.md  18-million-controls-144fps.md  19-commercialization-gap.md  20-keyboard-focus.md  21-text-input-ime-clipboard.md  22-scroll-system.md  23-taffy-text-wrap.md  24-parley-accesskit.md  25-overlay-release-engineering.md  26-arco-design-ui-kit.md  27-commercialization-gap-update.md  28-no-arco-usability.md  29-electron-gap-and-event-coverage.md
docs/zh-CN/: architecture.md  getting-started.md  performance.md  reactivity.md  rendering-backends.md  styling.md  sv-components.md
examples/arco-gallery/: Cargo.toml
examples/arco-gallery/src/: main.rs
examples/counter/: Cargo.toml
examples/counter-sfc/: Cargo.toml  build.rs
examples/counter-sfc/src/: Counter.sv  Counter.svelte  main.rs
examples/counter/src/: main.rs
examples/input-demo/: Cargo.toml  README.md  build.rs
examples/input-demo/src/: InputDemo.sv  main.rs
examples/membench/: Cargo.toml  README.md
examples/membench/src/: main.rs
examples/multi-window/: Cargo.toml
examples/multi-window/src/: main.rs
examples/multiclosure-check/: Cargo.toml
examples/multiclosure-check/src/: Check.svelte  lib.rs
examples/overlay-demo/: Cargo.toml
examples/overlay-demo/src/: Dialog.sv  Dialog.svelte  OverlayDemo.svelte  main.rs
examples/settings-sfc/: Cargo.toml  build.rs
examples/settings-sfc/src/: Settings.sv  main.rs
examples/showcase/: Cargo.toml
examples/showcase/src/: Card.svelte  Showcase.sv  Stepper.svelte  TaskRow.sv  main.rs
examples/todo-sfc/: Cargo.toml
examples/todo-sfc/src/: Todo.sv  TodoItem.svelte  main.rs
examples/vap-gift/: Cargo.toml
examples/vap-gift/src/: main.rs
