[package]
name = "sv-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = ".svelte 语言服务器(LSP):把编译器诊断实时喂给编辑器"
# 暂不随首发(MVP,补全/跳转未做);不在任何首发 crate 的依赖闭包里。
# 机器可查的护栏:防依赖序脚本或 `cargo publish --workspace` 误发。
publish = false

[[bin]]
name = "sv-lsp"
path = "src/main.rs"

[dependencies]
# 复用 sv-compiler 的编译前端(诊断)与手写 JSON —— 全零外部依赖,与全仓一致
sv-compiler = { workspace = true }
