[package]
name = "sv-pag"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "PAG(Tencent Portable Animated Graphics)容器解析 —— 纯 Rust,不绑 libpag"
readme = "README.md"

[dependencies]
