[package]
name = "sv-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "桌面渲染壳:winit 窗口 + CPU 自绘(softbuffer/tiny-skia/swash)"

[dependencies]
sv-reactive = { workspace = true }
sv-ui = { workspace = true }
# 矢量动画:velato 求值 → PathSink 路径动词,壳侧桥到 Painter(AnimSource::Vector)
sv-lottie = { workspace = true }
# PAG 位图序列:容器解析 + 差分帧重放(解码器由调用方注入,壳侧不绑图片解码器)
sv-pag = { workspace = true }
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"
# 文本栈:懒解析 + 零拷贝(fontdue 急切解析 CJK ~173MB 的替代,调研 16/17)
swash = "0.2.10"
# 剪贴板(调研 21 §2.6:1Password 维护,Win/macOS/X11 原生;平台物放壳层)
arboard = { version = "3", default-features = false }
# GPU 后端(ADR-3b / 调研 14):默认关闭,backend-vello feature 启用。
# wgpu 版本跟随 vello(0.9 → wgpu 29),经 vello::wgpu 再导出使用,不直接依赖
vello = { version = "0.9", optional = true }
pollster = { version = "0.4", optional = true }
taffy = { version = "0.12", default-features = false, features = ["std", "flexbox", "taffy_tree", "content_size"] }
parley = "0.11"
accesskit = "0.24"
accesskit_winit = "0.33"

[features]
default = []
backend-vello = ["dep:vello", "dep:pollster"]
