[package]
name = "membench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
backend-vello = ["sv-shell/backend-vello"]

[dependencies]
sv-reactive = { workspace = true }
sv-ui = { workspace = true }
sv-shell = { workspace = true }
# --blit 模式的持久 framebuffer(与 sv-shell 同版本约束)
tiny-skia = "0.11"
