[package]
name = "showcase"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
sv-reactive = { workspace = true }
sv-ui = { workspace = true }
sv-shell = { workspace = true }

[features]
# 转发给 sv-shell:cargo run -p showcase --features backend-vello
backend-vello = ["sv-shell/backend-vello"]

[build-dependencies]
sv-compiler = { workspace = true }
